# dcc012-lab01-arquivos

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in
src/: CMakeLists.txt  config.h  estudante.cc  estudante.h  siga.cc  siga.cpp  siga.h
tests/: CMakeLists.txt  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
tests/data/: estudantes.csv
